spacings/paddings corrected. Added styles logic based on the elementsShape prop on the rowTile component

--- a/src/app/components/right-section/styles.module.scss
+++ b/src/app/components/right-section/styles.module.scss
@@ -3,7 +3,7 @@
     background: linear-gradient(180deg,rgba(34, 34, 34, 1) 0%, rgba(18, 18, 18, 1) 50%);
     border-radius: 1rem;
     height: 100%;
-    padding: var(--padding-md) var(--padding-sm);
+    padding: var(--padding-md) var(--padding-lg);
     box-sizing: border-box;
     color: var(--font-primary);
 }
